# gcp_agents

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
agents/: README.md  __init__.py
agents/survey/: __init__.py
agents/survey/api/: __init__.py  main.py  schemas.py
agents/survey/core/: __init__.py
followup/: __init__.py
followup/api/: __init__.py  main.py
followup/core/: __init__.py  followups.py
infra/: README.md
infra/survey/: cloudbuild.yaml
shared/: __init__.py  config.py
shared/speech/: openai_service.py
tests/: conftest.py
tests/followup/: test_api.py
tests/survey/: test_api.py  test_speech_service.py
